Image alignment issue fix

--- a/stylesheets/kb.css
+++ b/stylesheets/kb.css
@@ -394,6 +394,7 @@ pre.pygments .tok-o {
   border-radius: 5px;
   margin-bottom: 24px;
   margin-top: 10px;
+  display: inline;
 }
 
 .main .note img {
@@ -642,4 +643,11 @@ pre.pygments .tok-c1 {
 
 .DocSearch-Hit-content-wrapper {
   overflow-x: inherit !important;
+}
+
+
+.oneline_with_image img {
+    display: inline-block;
+    height: 30px;
+    margin: 0 10px;
 }
